# NoVision

./: CMakeLists.txt  README.md  added this XML snippet: robocup-ssl.xml.desktop  ballDetection_LAB.cpp  robocup-ssl-cam-1-lut-yuv.xml  robocup-ssl-teams.xml  robocup-ssl.xml
exes/: CMakeLists.txt
exes/bDetect/: CMakeLists.txt  bDetect.cpp  main.cpp
inc/: bDetect.hpp  configs.json
